<resources>
    <string name="app_name">ACADEMIC ALLIANCE</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="send_code">SEND CODE</string>
    <string name="phone_number">Phone Number</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="enter">ENTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- In res/values/strings.xml -->
    <string name="default_notification_channel_id">default_channel</string>
    <string name="phone">Phone</string>
    <string name="update_profile">Update profile</string>
    <string name="logout">Logout</string>
    <string name="add_task">ADD TASK</string>
    <string name="back">BACK</string>
    <string name="select_time">Select Time</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="save_task">Save Task</string>
    <string name="developed_by_group_9">Developed by Group 9</string>
    <string name="write_message_here">Write message here</string>
    <string name="_username">Username</string>
    <string name="_1_">1</string>
    <string name="_3_">3</string>
    <string name="enter_code">Enter Code</string>
    <string name="_1__">1</string>
    <string name="_2_">2</string>
    <string name="_3__">3</string>
    <string name="search_user">Search User</string>
    <string name="username_">Username</string>
    <string name="add_task_">Add Task</string>
    <string name="hello">Hello</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="hi_there">Hi there!</string>
    <string name="_10_23_am">10:23 AM</string>
    <string name="task_title_">Task Title</string>
    <string name="select_time_">Select Time</string>
    <string name="task_description_">Task Description</string>
    <string name="username__">Username</string>
    <string name="___user_name">User name</string>
    <string name="_000000000000">+000000000000</string>
    <string name="task_title2">Task Title</string>
    <string name="date">Date</string>
    <string name="task_description___">Task Description</string>
    <string name="time">Time</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>


</resources>