<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/task_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"
        android:inputType="text"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/task_time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_time"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/task_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description"
        android:inputType="textMultiLine"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/save_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        android:backgroundTint="@color/my_primary"
        android:textColor="@android:color/white" />
</LinearLayout>
