<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_task_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title_"
        android:inputType="text"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edit_task_time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_time_"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edit_task_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description_"
        android:inputType="textMultiLine"
        android:layout_marginBottom="16dp" />

</LinearLayout>