<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:weightSum="100"
    tools:context=".LoginPhoneNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="10">
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/_1"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/_2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/_3"/>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/phone_icon"
        app:tint="@color/my_primary"
        android:layout_weight="10"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_mobile_number"
        android:layout_gravity="center_vertical"
        android:letterSpacing="0.08"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/login_countrycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false" />

        <EditText
            android:id="@+id/login_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dp"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="20">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/send_code"
            android:id="@+id/send_otp_btn"/>
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/my_primary"
            android:layout_gravity="center"
            android:id="@+id/login_progress_bar"/>
    </LinearLayout>
</LinearLayout>