<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray"
            android:src="@drawable/person_icon"
            android:scaleType="centerCrop"
            android:layout_marginBottom="40dp"
            android:id="@+id/profile_image_view"
            android:importantForAccessibility="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/username__"
            android:inputType="text"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:id="@+id/profile_username"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/phone"
            android:inputType="phone|number"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:enabled="false"
            android:id="@+id/profile_phone"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_corner"
                android:text="@string/update_profile"
                android:id="@+id/profile_update_btn" />

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/my_primary"
                android:layout_gravity="center"
                android:visibility="gone"
                android:id="@+id/profile_progress_bar" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/logout"
            android:textColor="@color/my_primary"
            android:id="@+id/logout_btn" />
    </LinearLayout>
</ScrollView>
